# figya

./: .gitignore  CLAUDE.md  README  README.md  calc.rb  pyproject.toml
src/figya/: __init__.py  __main__.py  cli.py  commands.py  completions.py  config.py  evaluator.py  highlighting.py  persistence.py  repl.py  variables.py
